overflow bug fix

--- a/sass/wordpress/_media_queries.scss
+++ b/sass/wordpress/_media_queries.scss
@@ -1,6 +1,10 @@
 /* Used to alter styles for screens at least 768px wide. This is where the grid changes. */
 @media only screen and (min-width: 768px) {
 
+	.site {
+		overflow: hidden;
+	}
+
 	/* Menu */
 	.top-bar .name  {
 		border-left: $topbar-divider-border-bottom;
